# libife

./: CMakeLists.txt  README.md
iferead/: iferead.c
include/: ife.h
src/: ife.c
